<resources>
    <string name="app_name">Sportify</string>
    <string name="intro_text">Appen är den perfekta för att kombinera nya upplevelser med sport och umgänge</string>

    /* Strings Registrera konto */
    <string name="email">E-post</string>
    <string name="username">Välj ett användarnamn</string>
    <string name="password">Välj ett lösenord</string>
    <string name="password_repeat">Upprepa lösenord</string>
    <string name="phone_number">Telefonnummer (valfritt)</string>
    <string name="sign_up">Registrera konto</string>
    <string name="facebook_app_id">2064612590432123</string>

    /* Strings Logga in */
    <string name="log_in">Logga in</string>
    <string name="logpassword">Lösenord</string>


    /* Strings Skapa profil */
    <string name="profile_firstname">Förnamn</string>
    <string name="profile_firstname_hint">Förnamn</string>
    <string name="profile_lastname">Efternamn</string>
    <string name="profile_lastname_hint">Efternamn</string>
    <string name="profile_birthday">Födelsedatum</string>
    <string name="descriptionbox_profile_header">Om mig</string>
    <string name="descriptionbox_profile_text">Berätta om dig själv</string>
    <string name="profile_picture_text">Lägg till bild</string>
    <string name="profile_interests_parkour">Parkour</string>
    <string name="profile_birthday_hint">YYYY-MM-DD</string>
    <string name="profile_text">Skapa en profil så andra kan lära känna dig bättre
    och vi kan hjälpa dig hitta roliga event anpassade efter dina intressen. </string>
    <string name="intressen_text">Intressen</string>
    <string name="profile_interests_fotball">Fotboll</string>
    <string name="profile_interests_basket">Basket</string>
    <string name="profile_interests_bandy">Bandy</string>
    <string name="profile_interests_volleyball">Vollyboll</string>
    <string name="profile_interests_swimming">Simming</string>
    <string name="profile_interests_outdoortraining">Utegym</string>
    <string name="profile_interests_ridning">Ridning</string>
    <string name="profile_interests_running">Löpning</string>
    <string name="profile_header">Skapa Profil</string>
    <string name="profile_interests_skateboard">Skateboard</string>
    <string name="profile_interests_badminton">Badminton</string>


    /* Error messages create profile */
    <string name="name_Empty_error">Ange namn</string>
    <string name="dateOfBirth_Empty_error">Ange datum</string>
    <string name="dateOfBirth_wrongFormat_error">Datum är i fel format</string>
    <string name="interests_Empty_Error">Ange minst ett intresse</string>

    /* Strings Intressen */
    <string name="interest1">Bollsport</string>
    <string name="interest2">Simning</string>
    <string name="interest3">Friidrott</string>
    <string name="interest4">Löpning</string>
    <string name="interest5">Gymning</string>
    <string name="interest6">Skating och parkour</string>
    <string name="interest7">Promenering</string>
    <string name="interest8">Ridning</string>
    <string name="interest9">Övrigt</string>


    /* Strings Profilflöde */
    <string name="userArea_text">Hej hej! Jag bor i Australien och folk älskar att ta selfies med lilla mig. Massa kärlek!</string>
    <string name="userArea_username">QuokkaSmileyface</string>
    <string name="userArea_userInfoName">Quokka Sweettooth</string>
    <string name="userArea_userInfoAge"> 26 år </string>
    <string name="userArea_userInfoInterest">-insert interest-</string>
    <string name="userArea_calendar">Min kalender</string>
    <string name="userArea_event">Mina event</string>
    <string name="userArea_edit">Redigera profil</string>
    <string name="userArea_rec">Rekommendationer</string>
    <string name="userArea_home">Hem</string>
    <string name="userArea_search">Sök</string>
    <string name="userArea_create">Skapa event</string>
    <string name="userArea_notifications">Notiser</string>
    <string name="userArea_friends">Vänner</string>

    /* Strings vänner */
    <string name="friends">Mina Vänner</string>
    <string name="searchFriends">Sök vänner... namn/användarnamn</string>
    <string name="friend_does_not_exist">Finns ingen vän med det namnet</string>


    /* Strings Skapa event */
    <string name="create_event">Skapa event</string>
    <string name="event_name">Event titel</string>
    <string name="create_event_hint">Namn på event</string>
    <string name="event_price">Pris</string>
    <string name="event_price_hint">SEK</string>
    <string name="event_place">Plats</string>
    <string name="event_place_hint">Plats</string>
    <string name="event_date">Datum</string>
    <string name="event_date_hint">DD/MM/YY</string>
    <string name="event_start_time">Starttid</string>
    <string name="event_end_time">Sluttid</string>
    <string name="event_time_hint">hh:mm</string>
    <string name="event_kategori">Kategori</string>
    <string name="event_type_hint">intresse</string>
    <string name="event_description">Beskrivning</string>
    <string name="event_descr_hint">Berätta lite mer om eventet</string>
    <string name="event_pic">Lägg till bild</string>
    <string name="event_host">Värd:</string>
    <string name="event_private">Privat</string>
    <string name="event_private_descr">Endast inbjudna kan gå med i eventet</string>
    <string name="event_public">Offentlig</string>
    <string name="event_next">Hoppa över>></string>
    <string name="event_back">Tillbaka</string>
    <string name="event_invite">Bjud in vänner>></string>
    <string name="event_public_descr">Vem som helst kan gå med i eventet</string>
    <string name="event_invite_friends">Nästan klar! Bjud in dina vänner till ditt event</string>
    <string name="event_created_message">Här ser du en överblick över eventet, gå vidare till nästa steg för att publicera det i appen.</string>
    <string name="no_friends_have_been_choosen">Ingen vän är vald</string>
    <string name="several_friends_have_been_choosen"> är inbjudna</string>
    <string name="one_friend_has_been_choosen"> är inbjuden</string>

    <string name="event_max_attendance">Max deltagare </string>
    <string name="createEvent_here">Skapa ditt event här</string>
    <string name="find_event">Hitta event</string>

    /* Error messages create event */
    <string name="event_name_empty_error">Ange namn</string>
    <string name="event_price_wrongformat_error">Pris är i fel format</string>
    <string name="event_date_empty_error">Ange datum</string>
    <string name="event_date_wrongformat_error">Datum är i fel format</string>
    <string name="event_start_time_empty_error">Ange starttid</string>
    <string name="event_end_time_empty_error">Ange sluttid</string>
    <string name="event_type_empty_error">Ange eventtyp</string>
    <string name="event_place_empty_error">Ange plats</string>


    /* Registrera konto */
    <string name="first_name_optional">Förnamn (frivilligt)</string>
    <string name="last_name_optional">Efternamn (frivilligt)</string>
    <string name="username_empty_error">Ange användarnamn</string>
    <string name="password_empty_error">Ange lösenord</string>
    <string name="firstName_Empty_error">Ange förnamn</string>
    <string name="lastName_Empty_error">Ange efternamn</string>
    <string name="phoneNumber_Empty_error">Ange mobilnummer</string>
    <string name="email_Empty_error">Ange e-post</string>
    <string name="email_wrongFormat_error">Vänligen skriv in en giltig e-postadress</string>
    <string name="event_place_does_not_exist">Platsen finns ej i vår databas</string>

    /* Strings Skapa event activity 3 */
    <string name="Event_Activity_3_Friends_Header">Vänner</string>
    <string name="Event_Activity_3_Header">Bjud in dina vänner</string>
    <string name="Event_Activity_3_MyFriends">Mina vänner</string>
    <string name="Event_Activity_3_FriendOneName">Namn?</string>


    /* Strings Karta */
    <string name="where_do_you_want_to_go">Vart vill du gå?</string>
    <string name="enter_category">Välj kategori</string>
    <string name="map">Karta</string>
    <string name="map_event_place_interest">Event/Plats/Intresse</string>
    <string name="map_listview">Listvy</string>
    <string name="map_mapview">Kartvy</string>
    <string name="maps_places">Platser</string>
    <string name="maps_events">Event</string>


    <string name="title_activity_maps">Karta</string>


    /* Strings Inställningar */
    <string name="settings_sett">Inställningar</string>
    <string name="settings_account">Konto</string>
    <string name="settings_account_settings">Kontoinställningar</string>
    <string name="settings_support">Support</string>
    <string name="sett_integrity">Integritetspolicy</string>
    <string name="settings_edit_profile">Redigera profil</string>


    /* Strings Recensioner */
    <string name="review_header">Recensera</string>
    <string name="review_score">Betyg</string>
    <string name="review_descriptionbox">Berätta vad du tycker....</string>
    <string name="review_write">Skriv en recension (frivilligt)</string>
    <string name="review_write_hint">Berätta vad du tycker</string>
    <string name="review_number_of">Recensioner (10)</string>


    /* Strings Event-sidan */
    <string name="event_interested">Intresserade: </string>
    <string name="event_coming">Kommer: </string>
    <string name="event_invited">Inbjudna: </string>
    <string name="event_intrested_radio">Intresserad</string>
    <string name="event_coming_radio">Kommer</string>
    <string name="event_not_coming_radio">Kommer inte</string>
    <string name="event_realnext">Nästa sida &gt;&gt;</string>

    <string name="event_rating">Betyg: </string>
    <string name="event_area_title">Simtävling fjärilssim</string>
    <string name="event_area_price">Pris: </string>


    /* Strings misc */
    <string name="submit_button">Skicka</string>
    <string name="first_name">Förnamn</string>
    <string name="last_name">Efternamn</string>
    <string name="userArea">Profilflöde</string>
    <string name="edit_profile_intro">Här kan du redigera din profil-information</string>
    <string name="start_end_time">Tid:</string>
    <string name="edit_event">Redigera event</string>
    <string name="save_changes">Spara ändringarna</string>
    <string name="delete_event">Ta bort event</string>
    <string name="register_here">Registrera konto</string>
    <string name="title_activity_friend">KompisAktivitet</string>
    <string name="find_friends">Hitta vänner</string>
    <string name="log_out">Logga ut</string>
    <string name="back"> &lt;&lt;Tillbaka </string>

    <string name="login_successfull">Inloggningen lyckades!</string>


    /* Strings Skapa event activity 5 */
    <string name="Event_activity_5_Header">Förhandsvisning</string>
    <string name="Event_activity_5_Event_Text">Du har nu skapat ett Event!
    Här får du en överblick över eventet</string>
    <string name="Event_activity_5_Participants">Inbjudna</string>
    <string name="Event_activity_5_ProfilePictureText">Host</string>
    <string name="Event_activity_5_EventName">Eventnamn?</string>


    <string name="integ_text7head">7. Samtycke</string>
    <string name="integ_text7"> Genom att använda vår webbplats godkänner du vår integritetspolicy.</string>
    <string name="integ_text6head">6. Använder vi oss av cookies?</string>
    <string name="integ_text6"> Ja. Våra cookies förbättrar tillgången till vår webbplats och identifierar återkommande besökare. Dessutom förbättrar våra cookies användarupplevelsen genom att spåra och målanpassa användarens intressen. Vår användning av cookies kopplas över huvud taget inte till personligt identifierbar information på vår webbplats. </string>
    <string name="integ_text5">Vi vidtar en rad olika säkerhetsåtgärder för att skydda dina personliga uppgifter. Vi använder oss av avancerade krypteringsmetoder för att skydda känsliga uppgifter som överförs över internet. </string>
    <string name="integ_text5head">5. Informationsskydd</string>
    <string name="integ_text4"> Vi säljer, handlar, eller på annat sätt överför, inte personligt identifierbar information till utomstående parter. Detta inkluderar inte betrodd tredjepart som hjälper oss att driva vår webbplats eller vårt företag, med kravet att dessa parter godkänner att hålla informationen konfidentiell.
    Vi anser att det är nödvändigt att dela information i syfte att undersöka, förhindra eller vidta åtgärder mot illegala aktiviteter, misstänkt bedrägeri, situationer som medför en potentiell risk för en persons fysiska säkerhet, brott mot våra användarvillkor eller andra tillfällen då lagen kräver så.
    Allmänna uppgifter kan dock delas vidare till utomstående parter för marknadsföring, i annonssyfte eller andra ändamål.</string>
    <string name="integ_text4head">4. Utlämnande till tredje part</string>
    <string name="integ_text3head">3. E-handelssäkerhet</string>
    <string name="integ_text3">Vi är de enda som äger informationen som samlas in på den här webbplatsen. Din personligt identifierbara information kommer inte att säljas, utbytas, överföras eller delas vidare till något annat företag, i något syfte, utan ditt samtycke, förutom då så krävs för att uppfylla en begäran och/eller överföring.</string>
    <string name="integ_text2head">2. Användning av information</string>
    <string name="integ_text2">
    Den information vi samlar in från dig kan användas för att:
    •	Göra din upplevelse personlig och tillgodose dina personliga behov
    •	Förbättra vår app
    •	Förbättra vår kundservice och ditt behov av hjälp
    •	Erbjuda personliga event anpassade efter dina intressen eller lokalisering.</string>
    <string name="integ_text1head">1. Insamling av information</string>
    <string name="integ_text1"> Vi samlar in information från dig när du registrerar dig på vår webbplats, loggar in på ditt konto, registrerar information och/eller när du loggar ut. Den insamlade informationen inkluderar ditt namn, dina intressen, dina event, dina recensioner. </string>

    /* Strings läggtillnyavänner */
    <string name="friends_header">Lägg till nya vänner</string>

    /* Notifikationer */
    <string name="event_invite_notification">har bjudit in dig till sitt event</string>
    <string name="friend_request">vill lägga till dig som vän</string>
    <string name="friends_text">Personer du kanske känner</string>
    <string name="dialog_fragment_yes">Ja, absolut!</string>
    <string name="dialog_fragment_no">Nej, tyvärr</string>
    <string name="dialog_Fragment_friend_request">Vill du acceptera vänförfrågan?</string>

    /* Strings frienndsProfile */
    <string name="friendname">Namn?</string>
    <string name="friendage">Ålder?</string>
    <string name="friend_add">Lägg till som vän</string>
    <string name="friend_description">Beskrivning?</string>
    <string name="friend_interests">Intressen?</string>
    <string name="friend_event">Event</string>
    <string name="friend_event_place">Plats:</string>
    <string name="friend_event_host">Värd:</string>
    <string name="friend_event_date">Datum:</string>
    <string name="friend_event_max">Max deltagare:</string>
    <string name="friend_event_start_time">Starttid:</string>
    <string name="friend_event__end_time">Sluttid:</string>
    <string name="friend_event_price">Pris:</string>




</resources>