...
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <EditText
        android:id="@+id/etRegisterMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDarkGrey"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15sp"
        android:ems="10"
...
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="47dp"
        android:layout_alignBottom="@+id/etRegisterPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:drawablePadding="15sp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="signUpButtonClick"
...
